<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.coursera.android.capstone.client.ui.patient.PatientCheckInActivity" >

    <ProgressBar
        android:id="@+id/progress_view"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/form_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/checkin_medications_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkin_button"
            android:layout_below="@+id/head"
            android:divider="@null"
            android:dividerHeight="@dimen/zero" />

        <Button
            android:id="@+id/checkin_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/checkin_button" />

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/prompt_pain_severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_pain_severity" />

            <RadioGroup
                android:id="@+id/pain_severity_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/radio_group_vertical_margin"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/pain_severity_well_controlled_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/WELL_CONTROLLED" />

                <RadioButton
                    android:id="@+id/pain_severity_moderate_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MODERATE" />

                <RadioButton
                    android:id="@+id/pain_severity_severe_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SEVERE" />
            </RadioGroup>

            <TextView
                android:id="@+id/prompt_eating_problems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_eating_problems" />

            <RadioGroup
                android:id="@+id/eating_problems_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/radio_group_vertical_margin"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/eating_problems_no_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/NO" />

                <RadioButton
                    android:id="@+id/eating_problems_some_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SOME" />

                <RadioButton
                    android:id="@+id/eating_problems_cant_eat_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CANT_EAT" />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>