<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/prompt_medication_intake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/prompt_medication_intake" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/medication_taken_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/medication_taken_yes_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/medication_taken_no_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/no" />
        </RadioGroup>

        <Button
            android:id="@+id/set_medication_intake_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:minHeight="@dimen/zero"
            android:text="@string/set_medication_intake_time_button" />

        <TextView
            android:id="@+id/medication_intake_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:enabled="false" />
    </LinearLayout>

</LinearLayout>