<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.coursera.android.capstone.client.ui.doctor.DoctorPatientDetailsActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/full_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_vertical_margin"
            android:layout_marginBottom="@dimen/grid_vertical_margin"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/full_name_label" />

        <TextView
            android:id="@+id/medical_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_vertical_margin"
            android:layout_marginBottom="@dimen/grid_vertical_margin"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/medical_number_label" />

        <TextView
            android:id="@+id/dob_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_vertical_margin"
            android:layout_marginBottom="@dimen/grid_vertical_margin"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/dob_label" />

        <TextView
            android:id="@+id/full_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_vertical_margin"
            android:layout_marginBottom="@dimen/grid_vertical_margin"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:id="@+id/medical_number_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_vertical_margin"
            android:layout_marginBottom="@dimen/grid_vertical_margin"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:id="@+id/dob_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_vertical_margin"
            android:layout_marginBottom="@dimen/grid_vertical_margin"
            android:layout_row="2"
            android:layout_column="1" />

        <Space
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="@dimen/patient_details_grid_first_column_spacer" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/button_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/checkins_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkins_button" />

        <Button
            android:id="@+id/prescriptions_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prescriptions_button" />

    </LinearLayout>

</LinearLayout>
