<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.coursera.android.capstone.client.ui.doctor.DoctorPatientCheckinDetailsActivity" >

    <TextView
        android:id="@+id/checkin_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_row="0"
        android:text="@string/checkin_date_label" />

    <TextView
        android:id="@+id/checkin_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_row="1"
        android:text="@string/checkin_time_label" />

    <TextView
        android:id="@+id/checkin_pain_severity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_row="2"
        android:text="@string/checkin_pain_severity_label" />

    <TextView
        android:id="@+id/checkin_eating_problems_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_marginEnd="5dp"
        android:layout_row="3"
        android:text="@string/checkin_eating_problems_label" />

    <TextView
        android:id="@+id/checkin_medications_taken_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_row="4"
        android:text="@string/checkin_medications_taken_label" />

    <TextView
        android:id="@+id/checkin_date_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_row="0" />

    <TextView
        android:id="@+id/checkin_time_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_row="1" />

    <TextView
        android:id="@+id/checkin_pain_severity_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_row="2" />

    <TextView
        android:id="@+id/checkin_eating_problems_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginBottom="@dimen/grid_vertical_margin"
        android:layout_marginTop="@dimen/grid_vertical_margin"
        android:layout_row="3" />

    <Space
        android:layout_width="@dimen/checkin_details_grid_first_column_spacer"
        android:layout_column="0"
        android:layout_row="5" />

    <ListView
        android:id="@+id/checkin_details_medications_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="6" />

</GridLayout>